force-app/main/default/objects/CommercientSF__SorDetailSerRep__c/CommercientSF__SorDetailSerRep__c.object-meta.xml
<CustomObject>
    <description>Syspro SorDetailSerRep table.</description>
    <label>Syspro Serial Numbers Invoiced</label>
    <nameField>
        <label>Syspro Serial Numbers Invoiced</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Serial Numbers Invoiced</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>