force-app/main/default/objects/CommercientSF__SorDetailSerRep__c/fields/CommercientSF__Description__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Description__c</fullName>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>