force-app/main/default/objects/CommercientSF__SorDetailSerRep__c/fields/CommercientSF__Lot__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Lot__c</fullName>
    <label>Lot number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>