force-app/main/default/objects/CommercientSF__SorDetailSerRep__c/fields/CommercientSF__NewExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NewExpiryDate__c</fullName>
    <label>New expiry date</label>
    <type>Date</type>
</CustomField>