force-app/main/default/objects/CommercientSF__SorDetailSerRep__c/fields/CommercientSF__NewScrapDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NewScrapDate__c</fullName>
    <label>New scrap date</label>
    <type>Date</type>
</CustomField>