force-app/main/default/objects/CommercientSF__SorDetailSerRep__c/fields/CommercientSF__QtyReserved__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyReserved__c</fullName>
    <label>Quantity reserved for shipping</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>