force-app/main/default/objects/CommercientSF__SorDetailSerRep__c/fields/CommercientSF__QtyThisSession__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyThisSession__c</fullName>
    <label>Quantity this session</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>