force-app/main/default/objects/CommercientSF__SorDetailSerRep__c/fields/CommercientSF__Serial__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Serial__c</fullName>
    <label>Serial number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>