force-app/main/default/objects/CommercientSF__SorDetailSerRep__c/fields/CommercientSF__SorDetailRep__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SorDetailRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SorDetailRep</label>
    <referenceTo>CommercientSF__SorDetailRep__c</referenceTo>
    <relationshipName>SorDetailSerReps</relationshipName>
    <type>Lookup</type>
</CustomField>